# subtitle-translator

./: .gitignore  README.md  install-dependencies.cmd  launch-subtitle-translator.cmd  pyproject.toml
docs/superpowers/plans/: 2026-06-03-argos-review-fixes.md
src/game_subtitle_translator/: __init__.py  cache.py  capture.py  config.py  main.py  ocr.py  overlay.py  pipeline.py  preprocess.py  realtime.py  scanner.py  test_scene.py  translate.py
src/game_subtitle_translator/ui/: __init__.py  app.py  control_overlay.py  region_selector.py  text_overlay.py
tests/: test_argos_optional.py  test_capture.py  test_config.py  test_main.py  test_ocr.py  test_scanner.py  test_test_scene_e2e.py  test_text_pipeline.py
