[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-subtitle-translator"
version = "0.1.0"
description = "Real-time game subtitle translator overlay"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "numpy>=1.24",
  "mss>=9.0",
]

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
ocr = ["easyocr>=1.7"]

test = ["pytest>=8.0"]

[project.scripts]
game-subtitle-translator = "game_subtitle_translator.main:main"
game-subtitle-test-scene = "game_subtitle_translator.test_scene:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
